# aln_old

./: AUTHORS  Makefile.am  NEWS  configure.ac
include/: aln.h
include/structs/: alignment.h  queue.h  sequence.h
src/: Makefile.am  aln.c
src/avx2_aligners/: Makefile.am  avx2_sw.c  avx2_sw.h  avx2_sw_i8.c  avx2_sw_i8.h  avx2_swi.c  avx2_swi.h
src/avx_aligners/: Makefile.am  avx_sw.c  avx_sw.h
src/common/: Makefile.am  backtrack.c  backtrack.h  utils.c  utils.h
src/structs/: Makefile.am  alignment.c  queue.c  sequence.c
